<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.DetailsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="6dp">
                    <ImageView
                        android:id="@+id/photoFd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/no_photo"
                        android:layout_centerInParent="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:background="@color/white2" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/nameFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/cardView"
                android:layout_toStartOf="@+id/ivFavoritesFd"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/shadow1"
                android:text="@string/name" />
            <TextView
                android:id="@+id/typeOrSizeFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/shadow1"
                android:layout_below="@+id/nameFd"
                android:layout_toEndOf="@+id/cardView"
                android:layout_toStartOf="@+id/ivFavoritesFd"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:text="@string/_null" />
            <TextView
                android:id="@+id/ageOrNullFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/shadow1"
                android:layout_below="@+id/typeOrSizeFd"
                android:layout_toEndOf="@+id/cardView"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:visibility="visible"
                android:text="@string/_null" />
            <TextView
                android:id="@+id/genderOrWeightFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/shadow1"
                android:layout_below="@+id/cardView"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:text="@string/_null" />
            <TextView
                android:id="@+id/breedOrConstituentsFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/shadow1"
                android:layout_below="@+id/genderOrWeightFd"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:text="@string/_null" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_description"
                android:textStyle="bold"
                android:layout_below="@+id/breedOrConstituentsFd"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:textColor="@color/shadow1" />
            <TextView
                android:id="@+id/colorOrNullFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_null"
                android:layout_below="@+id/description"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:textColor="@color/shadow1"
                android:visibility="visible" />
            <TextView
                android:id="@+id/descriptionFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_below="@+id/colorOrNullFd"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/shadow1" />
            <ImageView
                android:id="@+id/ivFavoritesFd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_not_favorites"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_below="@+id/descriptionFd"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/shadow1" />
            <TextView
                android:id="@+id/priceFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_200_0"
                android:layout_alignTop="@+id/price"
                android:layout_toEndOf="@+id/price"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/shadow1" />
            <TextView
                android:id="@+id/pFd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_1"
                android:layout_alignTop="@+id/price"
                android:layout_toEndOf="@+id/priceFd"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="2dp"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/shadow1" />
            <ImageView
                android:id="@+id/ivBasketFd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_not_basket"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/price"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>